--- a/commtrust/templates-ra/debug.twig
+++ b/commtrust/templates-ra/debug.twig
@@ -1,2 +1,7 @@
-<pre>{{ delays }}</pre>
-
+<div class="container">
+<pre style="font-size: smaller; color: lightgrey;">
+DELAYS: {{ delays }}
+POST: {{ post }}
+GET: {{ get }}
+</pre>
+</div>
