--- a/commtrust/templates/complete.twig
+++ b/commtrust/templates/complete.twig
@@ -1,18 +1,22 @@
 {% extends 'index.twig' %}
 
 {% block proof %}
-<a href="/">home</a><br>
 <h3>Attestation {{ type }} via {{ id }}</h3>
 {% if proof %}
     <p>Found proof:<br>
     Acquired from {{ source }}<br>
-    <a href="{{ url }}?aid={{ aid }}&action=retract">Retract</a> proof<br>
-    <pre>{{ proof }}</pre>
+    On: {{ date }}
+    <p><input type=submit name=action value=retract> proof</p>
+    <table>
+    {% for k, vs in proof %}
+    <tr valign=top><td><b>{{ k }}</b></td><td>{% for v in vs %}{% if not v is iterable %}{{ v }}{% endif %}<br>{% endfor %}</td></tr>
+    {% endfor %}
+    </table>
 {% else %}
     {% if start %}
         <p>Attestation completed</p>
     {% else %}
-        <p><a href="{{ url }}?aid={{ aid }}&action=start">Start</a> Attestation</p>
+        <p><input type=submit name=action value=start> attestation</p>
     {% endif %}
 {% endif %}
 {% endblock %}
