--- a/commtrust/templates/index.twig
+++ b/commtrust/templates/index.twig
@@ -1,26 +1,49 @@
-<html>
-<body>
-<h1>Applicant</h1>
-<h3>Hello {{ name }}</h3>
-<p><a href='?action=logout'>logout</a></p>
+{{ include('header.twig') }}
+
+{% if aid %}
+    <input type=hidden name=aid value={{ aid }}>
+{% endif %}
 
 {% block proof %}
+<div class="container">
+<h2>Applicant vetting</h2>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+</div>
 {% endblock %}
 
 {% block open %}
-    <p><b>Open Attestations</b></p>
+    <div class="container">
+    <h3>Open Attestations</h3>
     {% for attestation in open %}
+    <div class="idcard">
     <a href="/complete.php?aid={{ attestation['attestation_id'] }}">{{ attestation['name'] }}</a><br>
+    </div>
     {% endfor %}
+    </div>
 {% endblock %}
 
 {% block completed %}
-    <p><b>Completed Attestations</b></p>
+    <div class="container">
+    <h3>Completed Attestations</h3>
     {% for attestation in completed %}
-    <a href="/complete.php?aid={{ attestation['attestation_id'] }}">{{ attestation['name'] }}</a>{% if attestation['ra'] %} approved by {{ attestation['ra'] }} on {{ attestation['approved_at'] }}{% endif %}<br>
+    <div class="idcard">
+    <a href="/complete.php?aid={{ attestation['attestation_id'] }}">{{ attestation['name'] }}</a><br>
+    <div class="proof">
+    proved on: {{ attestation['proved_at'] }}
+    {% if attestation['ra'] %}<br>
+    approved by {{ attestation['ra'] }}<br>
+    on {{ attestation['approved_at'] }}
+    {% endif %}<br>
+    {% for k,v in attestation['card'] %}
+    {{ k }}: {{ v }}<br>
     {% endfor %}
+    </div>
+    </div>
+    {% endfor %}
+    </div>
 {% endblock %}
 
-{{ include('debug.twig') }}
-</body>
-</html>
+{{ include('footer.twig') }}
