--- a/commtrust/templates-ra/header.twig
+++ b/commtrust/templates-ra/header.twig
@@ -9,6 +9,9 @@
         <h1>CommTrust</h1>
         <a href="/">home</a>
     </div>
+    <div style="float: left; position: absolute; bottom: 0px;">
+        <input type=text> <input type=submit value=search>
+    </div>
     <div style="float: right;">
         {{ name }} <input type=submit name=action value=logout>
     </div>
