--- a/commtrust/templates-ra/approve.twig
+++ b/commtrust/templates-ra/approve.twig
@@ -1,18 +1,24 @@
 {% extends 'index.twig' %}
 
-{% block proof %}
-    <h3>Proof of {{ attestation['attestation_name'] }} for {{ attestation['for_user'] }}</h3>
-    Acquired from {{ attestation['source'] }}<br>
-    {% if attestation['approved_by'] %}
-        Approved by {{ attestation['by_user'] }} at {{ attestation['approved_at'] }} for {{ attestation['for_user'] }}<br>
-        {% if attestation['approved_with']['in_person'] %} with in_person {% endif %}<br>
-        <p><input type=submit name=action value=disapprove> attestation</p>
+{% block evidence %}
+    <h3>Evidence of {{ claim['claim_name'] }} for {{ claim['for_user'] }}</h3>
+    Acquired from {{ claim['source'] }}<br>
+    Unlocks the following Attestations:<br><br>
+    {% for attestation in attestations %}
+        <div class="attestation">
+        {{ attestation['name'] }}
+        </div>
+    {% endfor %}
+    {% if claim['approved_by'] %}
+        <p>Approved by {{ claim['by_user'] }} at {{ claim['approved_at'] }} for {{ claim['for_user'] }}</p>
+        {% if claim['approved_with']['in_person'] %} with in_person {% endif %}<br>
+        <p><input type=submit name=action value=disapprove> claim</p>
     {% else %}
         <p><input type=checkbox name=with[in_person] value=1> in person</p>
-        <p><input type=submit name=action value=approve> attestation</p>
+        <p><input type=submit name=action value=approve> assertion</p>
     {% endif %}
     <table>
-    {% for k, vs in attestation['proof'] %}
+    {% for k, vs in claim['evidence'] %}
     <tr valign=top><td><b>{{ k }}</b></td><td>{% for v in vs %}{% if not v is iterable %}{{ v }}{% endif %}<br>{% endfor %}</td></tr>
     {% endfor %}
     </table>
