--- a/commtrust/templates-ra/index.twig
+++ b/commtrust/templates-ra/index.twig
@@ -1,30 +1,31 @@
 {{ include('header.twig') }}
 
-{% if pid %}
-    <input type=hidden name=pid value={{ pid }}>
+{% if aid %}
+    <input type=hidden name=aid value={{ aid }}>
 {% endif %}
 
-{% block proof %}
+{% block evidence %}
 <div class="container">
 <h2>RA vetting</h2>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Excepteur sint occaecat cuaidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </div>
 {% endblock %}
 
 {% block approved %}
     <div class="container">
-    <h3>Approved Attestations by {{ ra }}{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
-    {% for attestation in approved %}
-    <div class="idcard">
-    <a href="/approve.php?pid={{ attestation['proof_id'] }}">{{ attestation['name'] }}</a><br>
-    for <a href="/user.php?id={{ attestation['user_id'] }}">{{ attestation['display_name'] }}</a><br>
-    <div class="proof">
-    proved on {{ attestation['proved_at'] }}<br>
-    approved on {{ attestation['approved_at'] }}<br>
-    {% for k,v in attestation['card'] %}
+    <h3>Approved Claims by {{ ra }}{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
+    {% for assertion in approved %}
+    <div class="idcard approved">
+    <a href="/approve.php?aid={{ assertion['assertion_id'] }}">{{ assertion['name'] }}</a><br>
+    for <a href="/user.php?id={{ assertion['user_id'] }}">{{ assertion['display_name'] }}</a><br>
+    <div class="evidence">
+    proved on {{ assertion['proved_at'] }}<br>
+    via {{ assertion['source'] }}<br>
+    approved on {{ assertion['approved_at'] }}<br>
+    {% for k,v in assertion['card'] %}
     {{ k }}: {{ v }}<br>
     {% endfor %}
     </div>
@@ -35,14 +36,15 @@ Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deseru
 
 {% block unapproved %}
     <div class="container">
-    <h3>Unapproved Attestations{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
-    {% for attestation in unapproved %}
-    <div class="idcard">
-    <a href="/approve.php?pid={{ attestation['proof_id'] }}">{{ attestation['name'] }}</a><br>
-    for <a href="/user.php?id={{ attestation['user_id'] }}">{{ attestation['display_name'] }}</a><br>
-    <div class="proof">
-    proved on: {{ attestation['proved_at'] }}<br>
-    {% for k,v in attestation['card'] %}
+    <h3>Unapproved Claims{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
+    {% for assertion in unapproved %}
+    <div class="idcard completed">
+    <a href="/approve.php?aid={{ assertion['assertion_id'] }}">{{ assertion['name'] }}</a><br>
+    for <a href="/user.php?id={{ assertion['user_id'] }}">{{ assertion['display_name'] }}</a><br>
+    <div class="evidence">
+    proved on: {{ assertion['proved_at'] }}<br>
+    via {{ assertion['source'] }}<br>
+    {% for k,v in assertion['card'] %}
     {{ k }}: {{ v }}<br>
     {% endfor %}
     </div>
