--- a/commtrust/templates-ra/error.twig
+++ b/commtrust/templates-ra/error.twig
@@ -1,11 +1,5 @@
 {% extends 'index.twig' %}
 
-{% block proof %}
+{% block content %}
 <p>You are not allowed to login to this site</p>
-{% endblock %}
-
-{% block approved %}
-{% endblock %}
-
-{% block unapproved %}
 {% endblock %}
