--- a/commtrust/www-ra/stylesheet.css
+++ b/commtrust/www-ra/stylesheet.css
@@ -14,6 +14,10 @@ div {
     margin: 0px 0px 8px 0px;
 }
 
+div.logs {
+    background: #E0E0FF;
+}
+
 div.container {
     width: 100%;
     position: relative;
