--- a/commtrust/www/stylesheet.css
+++ b/commtrust/www/stylesheet.css
@@ -14,6 +14,10 @@ div {
     margin: 0px 0px 8px 0px;
 }
 
+div.logs {
+    background: #E0E0FF;
+}
+
 div.container {
     width: 100%;
     position: relative;
@@ -28,6 +32,14 @@ div.attestation {
     height: 50px;
     overflow: hidden;
     font-size: smaller;
+}
+
+div.claims {
+    width: 50%;
+    border: 2px solid black;
+    border-radius: 8px;
+    background: #E0E0E0;
+    padding: 4px;
 }
 
 div.idcard {
@@ -61,4 +73,9 @@ a {
     text-decoration: none;
     font-weight: bold;
     color: grey;
+}
+
+a:hover {
+    text-decoration: underline;
+    text-decoration-color: black;
 }
