--- a/commtrust/templates/totp.twig
+++ b/commtrust/templates/totp.twig
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>Register Token</h2>
 name: {{ name }}<br>
-TOTP secret:<br>
+TOTP secret: {{ secret }}<br>
 <p><img src="{{ qrcode }}"></p>
 <img id="counter" src="counter.png" width=120 height=10></p>
 <p>checksum: <input type=text name=totp_check {#value={{ totp }}#}> <input type=submit name=totp_action value=submit></p>
