--- a/commtrust/templates-ra/index.twig
+++ b/commtrust/templates-ra/index.twig
@@ -14,11 +14,28 @@ Excepteur sint occaecat cuaidatat non proident, sunt in culpa qui officia deseru
 </div>
 
 <div class="container">
-<h3>Approved Claims by {{ ra }}{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
+<h3>Unapproved Claims{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
+{% for assertion in unapproved %}
+<div class="idcard completed">
+<a href="/approve.php?aid={{ assertion['assertion_id'] }}">{{ assertion['name'] }}</a><br>
+for {{ assertion['display_name'] }}<br>
+<div class="evidence">
+proved on: {{ assertion['proved_at'] }}<br>
+via {{ assertion['source'] }}<br>
+{% for k,v in assertion['card'] %}
+{{ k }}: {{ v }}<br>
+{% endfor %}
+</div>
+</div>
+{% endfor %}
+<div>
+
+<div class="container">
+<h3>Claims approved by {{ ra }}{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
 {% for assertion in approved %}
 <div class="idcard approved">
 <a href="/approve.php?aid={{ assertion['assertion_id'] }}">{{ assertion['name'] }}</a><br>
-for <a href="/user.php?id={{ assertion['user_id'] }}">{{ assertion['display_name'] }}</a><br>
+for {{ assertion['display_name'] }}<br>
 <div class="evidence">
 proved on {{ assertion['proved_at'] }}<br>
 via {{ assertion['source'] }}<br>
@@ -30,23 +47,6 @@ approved on {{ assertion['approved_at'] }}<br>
 </div>
 {% endfor %}
 </div<
-
-<div class="container">
-<h3>Unapproved Claims{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
-{% for assertion in unapproved %}
-<div class="idcard completed">
-<a href="/approve.php?aid={{ assertion['assertion_id'] }}">{{ assertion['name'] }}</a><br>
-for <a href="/user.php?id={{ assertion['user_id'] }}">{{ assertion['display_name'] }}</a><br>
-<div class="evidence">
-proved on: {{ assertion['proved_at'] }}<br>
-via {{ assertion['source'] }}<br>
-{% for k,v in assertion['card'] %}
-{{ k }}: {{ v }}<br>
-{% endfor %}
-</div>
-</div>
-{% endfor %}
-<div>
 
 {% endblock %}
 {{ include('footer.twig') }}
