--- a/commtrust/templates-ra/error.twig
+++ b/commtrust/templates-ra/error.twig
@@ -1,5 +1,5 @@
 {% extends 'index.twig' %}
 
 {% block content %}
-<p>You are not allowed to login to this site</p>
+<p>Please log in using an RA access granted account. The login button is right at the top of this page.</p>
 {% endblock %}
