--- a/commtrust/templates-ra/index.twig
+++ b/commtrust/templates-ra/index.twig
@@ -6,48 +6,47 @@
 
 {% block content %}
 <div class="container">
-<h2>RA vetting</h2>
-Start by clicking the name of one of the Unapproved Claims (yellow boxes), tick if the
-applicant is present in person, and click "approve" to confirm the claim (not "assertion"!).
-To disapprove, click on the title of one of the green claims that you approved
-(Claims Approved by ...) and click on"disapprove". 
+  <h2>RA vetting</h2>
+  Start by clicking the name of one of the Unapproved Claims (yellow boxes), tick if the
+  applicant is present in person, and click "approve" to confirm the claim (not "assertion"!).
+  To disapprove, click on the title of one of the green claims that you approved
+  (Claims Approved by ...) and click on"disapprove". 
 </div>
 
 <div class="container">
-<h3>Unapproved Claims{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
-{% for assertion in unapproved %}
-<div class="idcard completed">
-<a href="/approve.php?aid={{ assertion['assertion_id'] }}">{{ assertion['name'] }}</a><br>
-for <a href="?search={{ assertion['display_name'] }}">{{ assertion['display_name'] }}</a><br>
-<div class="evidence">
-proved on: {{ assertion['proved_at'] }}<br>
-via {{ assertion['source'] }}<br>
-{% for k,v in assertion['card'] %}
-{{ k }}: {{ v }}<br>
-{% endfor %}
+  <h3>Unapproved Claims{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
+  {% for assertion in unapproved %}
+  <div class="idcard completed">
+  <a href="/approve.php?aid={{ assertion['assertion_id'] }}">{{ assertion['name'] }}</a><br>
+  for <a href="?search={{ assertion['display_name'] }}">{{ assertion['display_name'] }}</a><br>
+    <div class="evidence">
+      proved on: {{ assertion['proved_at'] }}<br>
+      via {{ assertion['source'] }}<br>
+      {% for k,v in assertion['card'] %}
+        {{ k }}: {{ v|raw }}<br>
+      {% endfor %}
+    </div>
+  </div>
+  {% endfor %}
 </div>
-</div>
-{% endfor %}
-<div>
 
 <div class="container">
-<h3>Claims approved by {{ ra }}{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
-{% for assertion in approved %}
-<div class="idcard approved">
-<a href="/approve.php?aid={{ assertion['assertion_id'] }}">{{ assertion['name'] }}</a><br>
-for <a href="?search={{ assertion['display_name'] }}">{{ assertion['display_name'] }}</a><br>
-<div class="evidence">
-proved on {{ assertion['proved_at'] }}<br>
-via {{ assertion['source'] }}<br>
-approved on {{ assertion['approved_at'] }}<br>
-{% for k,v in assertion['card'] %}
-{{ k }}: {{ v }}<br>
-{% endfor %}
+  <h3>Claims approved by {{ ra }}{% if user %} for {{ user['display_name'] }}{% endif %}</h3>
+  {% for assertion in approved %}
+    <div class="idcard approved">
+      <a href="/approve.php?aid={{ assertion['assertion_id'] }}">{{ assertion['name'] }}</a><br>
+      for <a href="?search={{ assertion['display_name'] }}">{{ assertion['display_name'] }}</a><br>
+      <div class="evidence">
+        proved on {{ assertion['proved_at'] }}<br>
+        via {{ assertion['source'] }}<br>
+        approved on {{ assertion['approved_at'] }}<br>
+        {% for k,v in assertion['card'] %}
+          {{ k }}: {{ v|raw }}<br>
+        {% endfor %}
+      </div>
+    </div>
+  {% endfor %}
 </div>
-</div>
-{% endfor %}
-</div<
-
 
 {% endblock %}
 {{ include('footer.twig') }}
