--- a/commtrust/templates-ra/approve.twig
+++ b/commtrust/templates-ra/approve.twig
@@ -19,7 +19,7 @@
     {% endif %}
     <table>
     {% for k, vs in claim['evidence'] %}
-    <tr valign=top><td><b>{{ k }}</b></td><td>{% for v in vs %}{% if not v is iterable %}{{ v }}{% endif %}<br>{% endfor %}</td></tr>
+    <tr valign=top><td><b>{{ k }}</b></td><td>{% for v in vs %}{% if not v is iterable %}{{ v|raw }}{% endif %}<br>{% endfor %}</td></tr>
     {% endfor %}
     </table>
 {% endblock %}
